--- a/stringtie.yml
+++ b/stringtie.yml
@@ -1,35 +1,29 @@
 #the general usage of any assamble software
-#path/software [input_command <input.bam>] [other_options] [output_command <output.gtf>]
-command_format: ''
 
-
+#full commands for black-box software
 #initial command of assemble software
-initial_option:
+fixed_option:
   name: stringtie
   input_option: ' '
-  output_option: ' -o '
-  #software specific command
-  additional_option: ''
+  output_option: ' -o ./'
+  outputfile_format: '.gtf'
+  additional_option: ' -c 0.001 > /dev/null 2>&1'
 
 
 #parameters for choosed software
 #for catagory parameters, usage TF: 0 False 1 True / turn_on: 0 not use parameter 1 turn on parameter
 parameter_bounds:
-  - f: {prefix: ' -', type: float, min: 0.0, max: 0.999, default: 0.01, hard_min: 0, hard_max: float('inf')}
-  - m: {prefix: ' -', type: int, min: 30, max: 1000, default: 200, hard_min: 0, hard_max: float('inf')}
-  - a: {prefix: ' -', type: int, min: 0, max: 100, default: 10, hard_min: 0, hard_max: float('inf')}
-  - j: {prefix: ' -', type: float, min: 0.01, max: 20, default: 1, hard_min: 0, hard_max: float('inf')}
-  - c: {prefix: ' -', type: float, min: 0.0, max: 10.0, default: 1.0, hard_min: 0, hard_max: float('inf')}
-  - s: {prefix: ' -', type: float, min: 0.0, max: 30.0, default: 4.75, hard_min: 0, hard_max: float('inf')}
-  - g: {prefix: ' -', type: int, min: 0, max: 100, default: 50, hard_min: 0, hard_max: float('inf')}
-  - M: {prefix: ' -', type: float, min: 0.0, max: 0.999, default: 0.95, hard_min: 0, hard_max: float('inf')}
-  - u: {prefix: ' -', type: cag, usage: turn_on, min: 0, max: 1, default: 0, hard_min: 0, hard_max: 1}
+  - f: {prefix: ' -f', type: float, min: 0, max: 1, default: 0.01, hard_min: 0, hard_max: 1, step: 0.1}
+  - m: {prefix: ' -m', type: int, min: 30, max: 2000, default: 200, hard_min: 30, hard_max: 'inf', step: 2000}
+  - a: {prefix: ' -a', type: int, min: 0, max: 100, default: 10, hard_min: 0, hard_max: 'inf', step: 100}
+  - j: {prefix: ' -j', type: float, min: 0, max: 10, default: 1, hard_min: 0, hard_max: 'inf', step: 10}
+  - g: {prefix: ' -g', type: int, min: 0, max: 500, default: 50, hard_min: 0, hard_max: 'inf', step: 500}
+  - M: {prefix: ' -M', type: float, min: 0, max: 1, default: 1, hard_min: 0, hard_max: 1, step: 10.0}
+  - u: {prefix: ' -u', type: cag, usage: turn_on, min: 0, max: 1, default: 0, hard_min: 0, hard_max: 1, step: 1}
+  - t: {prefix: ' -t', type: cag, usage: turn_on, min: 0, max: 1, default: 0, hard_min: 0, hard_max: 1, step: 1}
     
-    
-
 
 #working directory for eval software
-#input the path for your installed path
 gffcompare:
   directory: /data008/users/zyan/software/gffcompare/gffcompare
   command: ' -r '
