--- a/stringtie.yml
+++ b/stringtie.yml
@@ -34,7 +34,7 @@ parameter_bounds:
 evaluation:
   - 
     format: "{path} {command} {ref_file} ./{pid}.gtf"
-    path: '/data008/users/zyan/software/gffcompare/gffcompare'
+    path: '/home/zyan/software/gffcompare/gffcompare'
     command: '-r'
     ref_file: '/data008/users/zyan/encode10/GRCh38.gtf'
     pid: ''
@@ -53,5 +53,5 @@ precheck:
 postcheck:
   #shell command to grep auc from output file
   auc_command: grep -P -o '(?<=auc =)[ 0-9.]*' {}.auc
-  #if you want to remove any file produced in process
+  #if you want to remove any file produced in process with specific pid
   clear_command: rm *{}*
